--- a/node/package.json
+++ b/node/package.json
@@ -2,12 +2,12 @@
   "name": "channel-probing-attack",
   "version": "0.0.1",
   "license": "MIT",
-  "main": "src/index.ts",
+  "main": "index.ts",
   "scripts": {
-    "scan-channel": "ts-node ./src/index.ts"
+    "scan-channel": "ts-node index.ts"
   },
   "dependencies": {
-    "@radar/lnrpc": "https://github.com/wbobeirne/lnrpc.git#0.7-beta-rc1",
+    "@radar/lnrpc": "0.7.0-beta-rc1",
     "dotenv": "8.0.0",
     "ts-node": "8.2.0",
     "typescript": "3.5.1"
